kubernetes/apps/games/minecraft/router/app/gateway.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: minecraft
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.65
    - type: IPAddress
      value: ::ffff:192.168.20.65
  listeners:
    - name: java
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
