kubernetes/apps/games/minecraft/router/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mc-router
spec:
  parentRefs:
    - name: lan-l4-minecraft
      sectionName: java
  rules:
    - backendRefs:
        - name: mc-router
          port: 25565
