kubernetes/apps/games/minecraft/router/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: games
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            cnpg.io/cluster: redspot
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - world
